--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My XBOX</title>
     <link rel="stylesheet" href="./215_8-2_nikolaev/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&amp;display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -45,7 +42,7 @@
                     <div class="heder__myxbox__img ">
                             <img src="./215_8-2_nikolaev/img/user.svg" alt="" class="user">
                     </div>
-                        <p class="header__text">My XBOX</p>
+                        <a href="./ragistration.html" class="header__text">My XBOX</a>
                     <div class="heder__myxbox__img__indent">
                         <a href="" class="header__link">
                             <img src="./215_8-2_nikolaev/img/down-arrow.svg" alt="">
@@ -81,38 +78,61 @@
 
         </div>
     </section>
-    <section class="section">
-        <div class="section__block">
-            <div class="section__container">
-                <img src="./215_8-2_nikolaev/img/xbox icon.svg" alt="" class="xbox_icon">
+    <section class="banner">
+        <div class="banner__wrap">
+            <div class="section__block">
+                <div class="section__container">
+                    <img src="./215_8-2_nikolaev/img/xbox icon.svg" alt="" class="xbox_icon">
+                </div>
+                <div class="section__text__container1">
+                    <p class="section__text__header title">The best value</p>
+                    <p class="section__text__title text">in games and entertainment</p>
+                </div>
             </div>
-            <div class="section__text__container1">
-                <p class="section__text__header">The best value</p>
-                <p class="section__text__title">in games and entertainment</p>
+            <div class="section__containers">
+                <div class="section__block__cart cart__indent">
+                    <img src="./215_8-2_nikolaev/img/xbox-one-x.png" alt="" class="cart__img">
+                    <div class="cart__text__block">
+                        <div class="section__cart__title">XBOX ONE X</div>
+                        <div class="section__cart__text">Faster Processing
+                            Smoother Gameplay</div>
+                        <button class="cart__button btn">Explore Consoles & Accessories</batton>
+                    </div>
+                </div>
+                <div class="section__block__cart cart__indent1">
+                    <div class="cart__img__block">
+                        <img src="./215_8-2_nikolaev/img/Group 2.svg" alt="" class="cart__mixer">
+                    </div> 
+                    <div class="cart__text__block">
+                        <div class="section__cart__title">mixer Streaming</div>
+                        <div class="section__cart__text">The Next Generation<br>
+                            Of Life Game Streaming</div>
+                        <button class="cart__button btn">Start Watching mixer</batton>
+                    </div>
+                </div>
+                <div class="section__block__cart">
+                    <div class="cart__img__block">
+                        <img src="./215_8-2_nikolaev/img/games_gold.png" alt="" class="cart__games__gold">
+                    </div>
+                    <div class="cart__text__block">
+                        <div class="section__cart__title">Free Games Every Month</div>
+                        <div class="section__cart__text">Get up to $700 in<br> 
+                            free games</div>
+                        <button class="cart__button btn">Get Free Games</batton>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="section__containers">
-            <div class="section__block__xbox">
-                <img src="./215_8-2_nikolaev/img/xbox-one-x.png" alt="">
-                <div class="section__xbox__title">XBOX ONE X</div>
-                <div class="section__xbox__text">Faster Processing
-                    Smoother Gameplay</div>
-                <a href="#" class="containers__btn">Explore Consoles &amp; Accessories</a>
-            </div>
-            <div class="section__block__mixer">
-                <img src="./215_8-2_nikolaev/img/mixer-logo.svg" alt="">
-                <div class="section__mixer__title">mixer Streaming</div>
-                <div class="section__mixer__text">The Next Generation
-                    Of Life Game Streaming</div>
-                <a href="#" class="containers__btn">Start Watching mixer</a>
-            </div>
-            <div class="section__block__games">
-                <img src="./215_8-2_nikolaev/img/1c93fdc8-0f06-4f34-a54c-7ac2a45c58ae.png" alt="">
-                <div class="section__games__title">Free Games Every Month</div>
-                <div class="section__games__text">Get up to $700 in 
-                    free games</div>
-                <a href="#" class="containers__btn">Get Free Games</a>
-            </div>
+    </section>
+    <section class="games">
+        <div class="games__wrap">
+            <div class="games__container">
+                <h1 class="games__title title">Xbox Design Lab</h1>
+                <p class="games__text">Make yours one in a billion with new colors, metallic finishes and rubberized grips.</p>
+                <div class="button__games__block">
+                    <button class="button__games1">Design Yours</button>
+                    <button class="button__games2">Explore Consoles & Accessories</button>
+                </div> 
         </div>
     </section>
 
